# omnis-bouncer

./: .gitignore  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  config.example.toml
.github/workflows/: build.yml  tests.yml
certs/: build_self_authority  build_self_cert  self_cert.cnf
certs/self_authority/: root.crt  root.key  root.pfx  root.srl
certs/self_cert/: dhparam.pem  server.crt  server.key
html/: default_waiting_room.html
redis_functions/: CHECK_SYNC_KEYS.lua  HAS_IDS.lua  ID_ADD.lua  ID_REMOVE.lua  README.md  STORE_TIMEOUT.lua  check_sync_keys.lua  has_ids.lua  id_position.lua  id_promote.lua  id_remove.lua  queue_timeout.lua  store_promote.lua  store_timeout.lua
src/: api.rs  app.rs  background.rs  certs.rs  cli.rs  config.rs  constants.rs  control.rs  cookies.rs  database.rs  discovery.rs  errors.rs  locales.rs  main.rs  omnis.rs  queue.rs  reverse_proxy.rs  secrets.rs  servers.rs  signals.rs  state.rs  stream.rs  upstream.rs  waiting_room.rs
src/control/: models.rs  routes.rs
src/queue/: control.rs  models.rs  scripts.rs  util.rs
ui/: .gitignore  .prettierrc.json  README.md  eslint.config.ts  histoire.config-ci.ts  histoire.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.vue  constants.ts  histoire.css  histoire.ts  icons.ts  main.css  main.ts  mocks.ts  models.ts
ui/src/components/: QueueStatus.story.vue  QueueStatus.vue  StatGroup.story.vue  StatGroup.vue  StatPanel.story.vue  StatPanel.vue  Stats.vue  TestContainer.vue  TopNav.story.vue  TopNav.vue  UpstreamTable.story.vue  UpstreamTable.vue
ui/src/stores/: queue.ts  upstreams.ts
ui/tests/: App.spec.ts  setup.ts
