[package]
name = "omnis-bouncer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http2", "multipart"] }
axum-extra = "0.10"
axum-response-cache = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
http = "1.3"
http-body-util = "0.1"
include_dir = "0.7"
lazy_static = "1.5"
redis = { version = "0.32", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["auth", "compression-full", "decompression-full", "timeout", "trace", "util", "validate-request"] }
tower-serve-static = { version = "0.1", features = ["metadata"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
uuid = { version = "1.18", features = ["fast-rng", "v4"] }
dashmap = "6.1.0"
regex = "1.11.2"

[dev-dependencies]
tracing-test = "0.2"
